--- a/DjangoProto/InteractiveMath_prj/static/css/intMath.css
+++ b/DjangoProto/InteractiveMath_prj/static/css/intMath.css
@@ -279,10 +279,10 @@ td {
 /***************all pages --stuff within site-footer ****************/
 /* students like more than one way to get to next page and they are used to a button at bottom saying "next" */
 #GoToNextPage {
-	float: right;
+/*	float: right; */  /* not sure if this should be on left or right.  Right gets in way of graphs */
 }
 #SiteInfo-links {
-	float: left;
+/*	float: left; --- can't float this else width of Site-footer will be zero as it ignores all floats*/
 }
 
 
